adicionando conteudo function, array, assincrona

--- a/Funcoes/cadastroCliente.html
+++ b/Funcoes/cadastroCliente.html
@@ -17,6 +17,7 @@
         let valorEmprestimo;
         let taxaDeJuros;
         let heBomPagador;
+        let avalistas;
 
         function cadastroCliente(nomeCliente,sobrenomeCliente,idadeCliente,numCliente,valorEmprestimoCliente,taxaDeJurosCliente,heBomPagadorCliente){
             nome = nomeCliente;
